Scrollbar fix
Scrollbar was visible even without content to scroll to

--- a/src/modules/createdBy/components/CreatorsList/CreatorsList.module.scss
+++ b/src/modules/createdBy/components/CreatorsList/CreatorsList.module.scss
@@ -1,6 +1,6 @@
 .cardList {
   max-height: 560px;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
